# k8s-log-anomaly-triage-service

./: .gitignore  Dockerfile  Makefile  POST_CAPTION.md  README.md  docker-compose.yml  pyproject.toml
docs/: CASE_STUDY.md
docs/github-actions/: ci.yml
examples/: crashloop_logs.json  deployment_trends.json  replay_manifest.json
infra/k8s/: deployment.yaml  service.yaml
infra/terraform/: main.tf  variables.tf
reports/: deployment_trends.md  replay_review.md
src/k8s_log_anomaly_triage_service/: __init__.py  app.py  cli.py  models.py  observability.py  replay.py  reporting.py  rules.py  trends.py
tests/: test_api_cli.py  test_replay.py  test_rules.py  test_trends.py
